--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-tensorflow 
-opencv-python 
-numpy 
+numpy==1.24.3
+pandas==1.5.0
+scipy==1.10.1
+scikit-learn==1.2.2
+tensorflow==2.10.0
+keras==2.10.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.10.0
+Keras-Preprocessing==1.1.2
+Pillow==9.4.0
+requests==2.31.0
+scikit-image==0.19.3
+h5py==3.8.0
+networkx==3.1
+protobuf
+grpcio
+opencv-python
 tqdm
